# ethicallama

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CREDITS.md  MANIFEST.in  README.md  flake.nix  pyproject.toml
.agents/skills/ollama-registry-pull/: SKILL.md
.agents/skills/rust-ffi-bind/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
contrib/nginx/: ethllama.conf
contrib/systemd/: INSTALL.md  SETUP.md  ethllama-user.service  ethllama.env.example  ethllama.service
docs/: PRIVACY.md  USAGE.md
docs/examples/: README.md  custom-engine.yaml  llama-cpp.yaml  llama-tts.yaml  llama2-c.yaml  tts-engine.yaml  voxtral-stt.yaml  voxtral-tts.yaml  whisper-cpp.yaml
ethllama/: __init__.py  __main__.py  api.py  cli.py  cli_mgmt.py  cli_profile.py  cli_stt.py  cli_tts.py  config.py  convert.py  engines.py  index.py  inference.py  llama2c.py  profiles.py  pull.py  pyproject.toml  stt.py  tts.py
ethllama-core/: Cargo.toml  build.rs
ethllama-core/src/: lib.rs  llama.rs  shim.cpp  utils.rs
ethllama/ethllama_core/: __init__.py
ethllama/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_llama2c.py  test_profiles.py  test_stt.py  test_tts.py  test_v020_blockers.py
scripts/: benchmark.sh  setup.sh
