[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ethicallama"
version = "0.1.8"
description = "ethical, local-only inference wrapper for llama.cpp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "luluthehungrycat"},
]
requires-python = ">=3.10"
keywords = ["llama", "llama.cpp", "gguf", "inference", "local-llm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tqdm>=4.0",
    "requests>=2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "pydantic>=2.0"]
pull = ["huggingface_hub>=0.20"]
convert = ["torch>=2.0", "transformers>=4.0"]
all = ["ethicallama[api,pull,convert]"]

[project.scripts]
ethllama = "ethllama.cli:main"

[project.urls]
Homepage = "https://github.com/luluthehungrycat/ethicallama"
Repository = "https://github.com/luluthehungrycat/ethicallama"
Issues = "https://github.com/luluthehungrycat/ethicallama/issues"
Changelog = "https://github.com/luluthehungrycat/ethicallama/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ethllama_core._core"
bindings = "pyo3"
manifest-path = "ethllama-core/Cargo.toml"
include = [
    "ethllama/**/*.py",
    "ethllama/**/*.yaml",
    "LICENSE",
    "CHANGELOG.md",
    "CREDITS.md",
    "AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["ethllama/tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux_i686", "*-manylinux_i686"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-build = "pip install maturin && yum install -y cmake ninja-build libcurl-devel openssl-devel"
test-requires = "pytest"
test-command = "pytest {project}/ethllama/tests/ -v --ignore={project}/ethllama/tests/test_integration.py"
environment = { RUSTFLAGS = "-C link-arg=-fno-omit-frame-pointer", MATH_BACKEND = "openblas", CXXFLAGS = "-fpermissive" }

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
environment = { RUSTFLAGS = "-C link-arg=-fno-omit-frame-pointer" }
