[package]
name = "ethllama-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethllama_core"
crate-type = ["cdylib"]  # For PyO3

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
libloading = "0.8"  # For dynamic library loading (optional)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
