[package]
name = "ethllama-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethllama_core"
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
