[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ethllama"
version = "0.1.0"
description = "ethical, local-only inference wrapper for llama.cpp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "luluthehungrycat"},
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tqdm>=4.0",
    "requests>=2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "pydantic>=2.0"]
pull = ["huggingface_hub>=0.20"]
convert = ["torch>=2.0", "transformers>=4.0"]
all = ["ethllama[api,pull,convert]"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ethllama_core._core"
bindings = "pyo3"
manifest-path = "ethllama-core/Cargo.toml"
python-source = "ethllama"
